# dimensions

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  install.sh
.github/workflows/: release.yml
src/: app.rs  dimension.rs  main.rs  path_completion.rs  tmux.rs  ui.rs  update.rs
