[package]
name = "dimensions"
version = "0.2.18"
description = "Terminal Tab Manager"
edition = "2024"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
dirs = "5.0"
fuzzy-matcher = "0.3"
unicode-width = "0.2"
semver = "1.0"
ureq = { version = "2.12", default-features = true, features = ["json"] }
ansi-to-tui = "8.0"
ratatui-core = "0.1"
